<resources>
    <string name="app_name">CurrencyNow</string>
    <string name="russian_ruble">Russian ruble</string>
    <string name="us_dollar">US Dollar</string>
    <string name="exchange">Exchange</string>
    <string name="contentDescrFlag">flag</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num00">00</string>
    <string name="num0">0</string>
    <string name="numPoint">.</string>
</resources>
