<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="ru.ulteam8.currencynow.MainActivity">

    <Button
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_but"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/source"

        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

    </ListView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/button_board"
            android:columnCount="4"
            android:rowCount="3">

            <Button android:text="@string/num1"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num2"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num3"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num4"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num5"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num6"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num7"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num8"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num9"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num00"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/num0"
                android:background="@drawable/ripple"/>

            <Button android:text="@string/numPoint"
                android:background="@drawable/ripple"/>

        </GridLayout>

    </RelativeLayout>

</RelativeLayout>

